took stuf ff out of folder and checked everything

--- a/CLT_2.html
+++ b/CLT_2.html
@@ -280,6 +280,9 @@ $(document).ready(function () {
 <li>
   <a href="CLT_2.html">CLT</a>
 </li>
+<li>
+  <a href="CLT_2.html">Case Study</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -342,14 +345,14 @@ hist(xbar_holder2, col = &quot;red&quot;, main = paste(&quot;Distribution of the
 <h2>Summary Statistics</h2>
 <pre class="r"><code>summary(xbar_holder1) #5 number summary and the mean</code></pre>
 <pre><code>##      Min.   1st Qu.    Median      Mean   3rd Qu.      Max. 
-## -1.115336 -0.223827  0.006582 -0.003273  0.204604  0.911881</code></pre>
+## -0.971758 -0.208537  0.008607 -0.002032  0.211730  0.942682</code></pre>
 <pre class="r"><code>summary(xbar_holder2) #5 number summary and the mean</code></pre>
 <pre><code>##      Min.   1st Qu.    Median      Mean   3rd Qu.      Max. 
-## -0.331790 -0.064439  0.002134  0.003349  0.074893  0.300551</code></pre>
+## -0.289157 -0.067640  0.001111  0.003963  0.071678  0.313053</code></pre>
 <pre class="r"><code>sd(xbar_holder1) # standard deviation of dstribuion 1</code></pre>
-<pre><code>## [1] 0.3112268</code></pre>
+<pre><code>## [1] 0.3089978</code></pre>
 <pre class="r"><code>sd(xbar_holder2) #standard deviation of distribuion 2</code></pre>
-<pre><code>## [1] 0.1019713</code></pre>
+<pre><code>## [1] 0.1021913</code></pre>
 </div>
 </div>
 
