--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@ $(document).ready(function () {
 <li>
   <a href="CLT_2.html">CLT</a>
 </li>
+<li>
+  <a href="CLT_2.html">Case Study</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
