deleted the always html line from RMD casestudy

--- a/CLT_2.html
+++ b/CLT_2.html
@@ -281,7 +281,7 @@ $(document).ready(function () {
   <a href="CLT_2.html">CLT</a>
 </li>
 <li>
-  <a href="CLT_2.html">Case Study</a>
+  <a href="caseStudy1Missing.html">Case Study</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -344,15 +344,15 @@ hist(xbar_holder2, col = &quot;red&quot;, main = paste(&quot;Distribution of the
 <div id="summary-statistics" class="section level2">
 <h2>Summary Statistics</h2>
 <pre class="r"><code>summary(xbar_holder1) #5 number summary and the mean</code></pre>
-<pre><code>##      Min.   1st Qu.    Median      Mean   3rd Qu.      Max. 
-## -0.971758 -0.208537  0.008607 -0.002032  0.211730  0.942682</code></pre>
+<pre><code>##     Min.  1st Qu.   Median     Mean  3rd Qu.     Max. 
+## -1.07255 -0.21573  0.01886  0.01422  0.24460  1.00638</code></pre>
 <pre class="r"><code>summary(xbar_holder2) #5 number summary and the mean</code></pre>
 <pre><code>##      Min.   1st Qu.    Median      Mean   3rd Qu.      Max. 
-## -0.289157 -0.067640  0.001111  0.003963  0.071678  0.313053</code></pre>
+## -0.318485 -0.060050  0.001584  0.001639  0.063905  0.335269</code></pre>
 <pre class="r"><code>sd(xbar_holder1) # standard deviation of dstribuion 1</code></pre>
-<pre><code>## [1] 0.3089978</code></pre>
+<pre><code>## [1] 0.3298478</code></pre>
 <pre class="r"><code>sd(xbar_holder2) #standard deviation of distribuion 2</code></pre>
-<pre><code>## [1] 0.1021913</code></pre>
+<pre><code>## [1] 0.09380263</code></pre>
 </div>
 </div>
 
