--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
   <a href="CLT_2.html">CLT</a>
 </li>
 <li>
-  <a href="CLT_2.html">Case Study</a>
+  <a href="caseStudy1Missing.html">Case Study</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
