added shiny link

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ $(document).ready(function () {
 <h4 class="date">February 5, 2020</h4>
 
 </div>
-
+<p> <a href="https://wlai0611.shinyapps.io/casestudy1shiny/"> App</a> </p>
 
 <p>test</p>
 
