--- a/index.html
+++ b/index.html
@@ -279,8 +279,9 @@ $(document).ready(function () {
   <a href="CLT_2.html">CLT</a>
 </li>
 <li>
-  <a href="caseStudy1Missing.html">Case Study</a>
+  <a href="caseStudy1Missing.html">CaseStudy</a>
 </li>
+<li class="dropdown-header">CaseStudy2</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -298,7 +299,7 @@ $(document).ready(function () {
 <h4 class="date">February 5, 2020</h4>
 
 </div>
-<p> <a href="https://wlai0611.shinyapps.io/casestudy1shiny/"> App</a> </p>
+
 
 <p>test</p>
 
