--- a/CLT_2.html
+++ b/CLT_2.html
@@ -277,13 +277,6 @@ $(document).ready(function () {
         <li>
   <a href="index.html">Home</a>
 </li>
-<li>
-  <a href="CLT_2.html">CLT</a>
-</li>
-<li>
-  <a href="caseStudy1Missing.html">CaseStudy</a>
-</li>
-<li class="dropdown-header">CaseStudy2</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -307,9 +300,8 @@ $(document).ready(function () {
 <h1>Simulator to Demonstrate CLT</h1>
 <div id="control-parameters" class="section level2">
 <h2>Control Parameters</h2>
-<pre class="r"><code>df = read.table(file.choose(),stringsAsFactors = FALSE,header = FALSE,sep = &quot;;&quot;)</code></pre>
-<pre><code>## Warning in scan(file = file, what = what, sep = sep, quote = quote, dec = dec, : EOF within quoted string</code></pre>
-<pre class="r"><code>n1 = 10 # sample size per sample for 1st distribution
+<pre class="r"><code>df = read.table(file.choose(),stringsAsFactors = FALSE,header = FALSE,sep = &quot;;&quot;)
+n1 = 10 # sample size per sample for 1st distribution
 n2 = 100 # sample size per sample for 2nd distribution (we will compare these distribuions) 
 simulations = 1000 #number of samples and thus number of xbars we will generate.  
 mu = 0; # mean parameter for use with normal distribuions
@@ -346,15 +338,15 @@ hist(xbar_holder2, col = &quot;red&quot;, main = paste(&quot;Distribution of the
 <div id="summary-statistics" class="section level2">
 <h2>Summary Statistics</h2>
 <pre class="r"><code>summary(xbar_holder1) #5 number summary and the mean</code></pre>
-<pre><code>##     Min.  1st Qu.   Median     Mean  3rd Qu.     Max. 
-## -1.01742 -0.19665  0.01675  0.01747  0.22137  1.19439</code></pre>
+<pre><code>##      Min.   1st Qu.    Median      Mean   3rd Qu.      Max. 
+## -0.890830 -0.219428 -0.016239  0.001374  0.223374  1.129371</code></pre>
 <pre class="r"><code>summary(xbar_holder2) #5 number summary and the mean</code></pre>
 <pre><code>##      Min.   1st Qu.    Median      Mean   3rd Qu.      Max. 
-## -0.331298 -0.068755 -0.002415 -0.003963  0.062899  0.297500</code></pre>
+## -0.293216 -0.063653  0.003878  0.002787  0.067899  0.376728</code></pre>
 <pre class="r"><code>sd(xbar_holder1) # standard deviation of dstribuion 1</code></pre>
-<pre><code>## [1] 0.3147743</code></pre>
+<pre><code>## [1] 0.327777</code></pre>
 <pre class="r"><code>sd(xbar_holder2) #standard deviation of distribuion 2</code></pre>
-<pre><code>## [1] 0.09955965</code></pre>
+<pre><code>## [1] 0.09951907</code></pre>
 </div>
 </div>
 
