added link to Rshiny apps

--- a/index.html
+++ b/index.html
@@ -294,9 +294,12 @@ $(document).ready(function () {
 </div>
 
 
-
-<a href=”google.com”> App</a>
-
+<p> This app creates plots to help in choosing variables for Naive Bayes Classifier to help
+predict employee attrition</p>
+<a href=”https://wlai0611.shinyapps.io/bayesshiny/”> Naive Bayes Variable Selection App</a>
+<p> This app creates plots to help in choosing variables for multiple regression to help
+predict employee salaries</p>
+<a href=”https://wlai0611.shinyapps.io/multiregshiny/”> Naive Bayes Variable Selection App</a>
 
 
 </div>
