--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ predict employee attrition</p>
 <a href=”https://wlai0611.shinyapps.io/bayesshiny/”> Naive Bayes Variable Selection App</a>
 <p> This app creates plots to help in choosing variables for multiple regression to help
 predict employee salaries</p>
-<a href=”https://wlai0611.shinyapps.io/multiregshiny/”> Naive Bayes Variable Selection App</a>
+<a href=”https://wlai0611.shinyapps.io/multiregshiny/”> Multiple Regression Variable Selection App</a>
 
 
 </div>
