Added shiny link for Bayes app

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>test WALER</p>
+<p> <a href="https://wlai0611.shinyapps.io/bayesshiny/"> App</a> </p>
 
 
 
