Added Rshiny descriptions, Rshiny links and Tableau page

--- a/index.html
+++ b/index.html
@@ -293,8 +293,21 @@ $(document).ready(function () {
 
 </div>
 
+<p> Hi, my name is Walter Lai a student at Southern Methodist University's Masters in Data Science
+Program.  This is a webpage for me to store projects I have worked on.  </p>
 
-<p> <a href="https://wlai0611.shinyapps.io/bayesshiny/"> App</a> </p>
+<p>
+  Please check out my RShiny app that helps variable selection with Naive Bayes Classifiers to
+  predict employees leaving their jobs.
+   <a href="https://wlai0611.shinyapps.io/bayesshiny/"> Employee Attrition Classification App</a> </p>
+
+<p>
+  Please check out my RShiny app that helps variable selection with multiple regression to
+  predict employees' salaries.
+   <a href="https://wlai0611.shinyapps.io/multiregshiny/"> Employee Attrition Classification App</a> </p>
+   <p> Check out my Tableau Vizzes!
+   <a href=https://public.tableau.com/profile/walter.lai#!/> Tableau Public Page </a>
+   </p>
 
 
 
