--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@ $(document).ready(function () {
         <li>
   <a href="index.html">Home</a>
 </li>
+        <li>
+  <a href="index.html">Home2</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
