added Case Study1 html and changed idex.html

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
         <li>
-  <a href="index.html">Home2</a>
+  <a href="caseStudy1Missing.html">Beer Case Study</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
