--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta name="author" content="Walter" />
 
 
-<title>Simple Website</title>
+<title>Simple Website!</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
