--- a/index.html
+++ b/index.html
@@ -273,11 +273,14 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Home</a>
-</li>
+          <a href="index.html">Home</a>
+        </li>
         <li>
-  <a href="caseStudy1Missing.html">Beer Case Study</a>
-</li>
+          <a href="caseStudy1Missing.html">Beer Case Study</a>
+        </li>
+        <li>
+          <a href="equationSolverPage.html">Reduced Row Echelon Solver</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
