added input box and ability to read from it when click solve

--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@ $(document).ready(function () {
         <li>
           <a href="equationSolverPage.html">Reduced Row Echelon Solver</a>
         </li>
+		<li>
+          <a href="eigenvalue_solver.html">Eigenvalue Solver</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
