--- a/eigenvalue_solver.html
+++ b/eigenvalue_solver.html
@@ -1,4 +1,10 @@
 <html>
 <head></head>
-<body>Hi</body>
+<body>
+<textarea name='matrix' rows=10 cols=20>
+1 2 3
+4 5 6
+</textarea>
+<button>Get Eigenvalues</button>
+</body>
 </html>
