added householder page

--- a/index.html
+++ b/index.html
@@ -284,6 +284,9 @@ $(document).ready(function () {
 		<li>
           <a href="eigenvalue_solver.html">Eigenvalue Solver</a>
         </li>
+		<li>
+		  <a href="householderReflector.html">Householder Reflections</a>
+		</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
