added links to source code for apps

--- a/householderReflector.html
+++ b/householderReflector.html
@@ -12,6 +12,8 @@ Ending Vector<span> </span>:<input id="endvec" type='text' size=50 value ="13 0 
 <textarea id='householder_output' rows=10 cols=30>
 
 </textarea>
+<br>
+<a href="https://github.com/wlai0611/wlai0611.github.io/blob/master/householder.js">Source Code</a>
 <script src="householder.js"></script>
 </body>
 </html>
