--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta name="author" content="Walter" />
 
 
-<title>Simple Website!</title>
+<title>Walter Bong Lai</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -275,18 +275,19 @@ $(document).ready(function () {
         <li>
           <a href="index.html">Home</a>
         </li>
+		
         <li>
-          <a href="caseStudy1Missing.html">Beer Case Study</a>
+          <a href="equationSolverRedirect.html">(Python Numpy) Reduced Row Echelon Solver</a>
         </li>
-        <li>
-          <a href="equationSolverPage.html">Reduced Row Echelon Solver</a>
-        </li>
+		
 		<li>
-          <a href="eigenvalue_solver.html">Eigenvalue Solver</a>
-        </li>
-		<li>
-		  <a href="householderReflector.html">Householder Reflections</a>
+		  <a href="householderReflector.html">(JavaScript & Python Numpy) Householder Reflections</a>
 		</li>
+		
+		<li>
+          <a href="caseStudy1Missing.html">(R) Beer Case Study</a>
+        </li>
+		
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -299,15 +300,19 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Simple Website</h1>
-<h4 class="author">Walter</h4>
-<h4 class="date">February 5, 2020</h4>
+<h1 class="title toc-ignore">Introduction</h1>
+<h4 class="author">Walter Bong Lai</h4>
+
 
 </div>
 
-<p> Hi, my name is Walter Lai a student at Southern Methodist University's Masters in Data Science
-Program.  This is a webpage for me to store projects I have worked on.  </p>
-
+<p> Hi, my name is Walter Bong Lai.  This is a webpage where I show off my skills. Click on the above tabs to see an example of each skill.</p>
+<p>My interests are: </p>
+<ul>
+<li>Linear Algebra</li>
+<li>Statistics</li>
+</ul>
+<!--
 <p>
   Please check out my RShiny app that helps variable selection with Naive Bayes Classifiers to
   predict employees leaving their jobs.
@@ -321,7 +326,7 @@ Program.  This is a webpage for me to store projects I have worked on.  </p>
    <a href=https://public.tableau.com/profile/walter.lai#!/> Tableau Public Page </a>
    </p>
 
-
+-->
 
 
 </div>
