added Cats to interests

--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@ $(document).ready(function () {
 <p> Hi, my name is Walter Bong Lai.  This is a webpage where I show off my skills. Click on the above tabs to see an example of each skill.</p>
 <p>My interests are: </p>
 <ul>
+<li>Cats</li>
 <li>Linear Algebra</li>
 <li>Statistics</li>
 </ul>
