added work experience and research experience as links

--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@ $(document).ready(function () {
           <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="householderReflector.html">(JavaScript & Python Numpy) Householder Reflections</a>
+          <a href="work_experience.html">Work Experience</a>
         </li>
 		
 		    <li>
-          <a href="caseStudy1Missing.html">(R) Beer Case Study</a>
+          <a href="academic_experience.html">Education/Research Experience</a>
         </li>
 		
       </ul>
