added hyperlinks to academic and work experience

--- a/index.html
+++ b/index.html
@@ -302,6 +302,11 @@ $(document).ready(function () {
 
 <p> Hi, my name is Walter Bong Lai.</p>
 <p>Look at the pictures of my previous projects below.</p>
+If you are interested you can <a href="work_experience.html">click here</a> to access my prior work experience.
+<br>
+And you can <a href="academic_experience.html">click here</a> to access my prior education and research experience.
+<br>
+<br>
 <figure>
   <figcaption>Below, I animated the orthogonal iteration algorithm which finds eigenvectors of symmetric matrices.<br>
     Background: The eigenvectors of a symmetric matrix can be found by continuously
