added id tags to the animation and images

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ And you can <a href="academic_experience.html">click here</a> to access my prior
   <br>
   The source code for this animation found here: <a href="singular_value_decomposition.html#orthogonal_iteration">Jupyter Notebook</a>
   </figcaption>
-  <img src="orthogonal_iteration.gif"/>
+  <img id="orthogonal_iteration" src="orthogonal_iteration.gif"/>
   
 </figure>
 
@@ -332,7 +332,7 @@ And you can <a href="academic_experience.html">click here</a> to access my prior
   using the orthogonal iteration algorithm from the first animation.
   <a href="singular_value_decomposition.html#singular_value_decomposition">Source Code Here</a>
   </figcaption>
-  <img src="hosico_svd.PNG"/>
+  <img id="singular_value_decomposition" src="hosico_svd.PNG"/>
 </figure>
 
 <!--
