redirected the orthogonal_iteration link to point to the source code link right above the gif image

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ And you can <a href="academic_experience.html">click here</a> to access my prior
 <br>
 <br>
 <figure>
-  <figcaption>Below, I animated the orthogonal iteration algorithm which finds eigenvectors of symmetric matrices.<br>
+  <figcaption id="orthogonal_iteration">Below, I animated the orthogonal iteration algorithm which finds eigenvectors of symmetric matrices.<br>
     Background: The eigenvectors of a symmetric matrix can be found by continuously
     multiplying a set of random vectors by that symmetric matrix and orthogonalizing
     the vectors after every multiplication. <br>  Notice how the animations alternate
@@ -317,7 +317,7 @@ And you can <a href="academic_experience.html">click here</a> to access my prior
   <br>
   The source code for this animation found here: <a href="singular_value_decomposition.html#orthogonal_iteration">Jupyter Notebook</a>
   </figcaption>
-  <img id="orthogonal_iteration" src="orthogonal_iteration.gif"/>
+  <img src="orthogonal_iteration.gif"/>
   
 </figure>
 
