gave credit to Dr. Sadler

--- a/index.html
+++ b/index.html
@@ -295,12 +295,13 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Introduction</h1>
+<h1 class="title toc-ignore">Walter Bong Lai</h1>
 
 
 </div>
 
-<p> Hi, my name is Walter Bong Lai.</p>
+<p>The HTML/CSS Webpage template was borrowed from <a href="https://bivinsadler.github.io/">a course taught by Dr. Bivin Sadler at SMU.</a>  </p>
+
 <p>Look at the pictures of my previous projects below.</p>
 If you are interested you can <a href="work_experience.html">click here</a> to access my prior work experience.
 <br>
@@ -315,7 +316,7 @@ And you can <a href="academic_experience.html">click here</a> to access my prior
     between bringing the vectors closer (matrix multiplication) and then 
     pushing them away from each other until they are 90 degrees from another (orthogonalization).<br>
   <br>
-  The source code for this animation found here: <a href="singular_value_decomposition.html#orthogonal_iteration">Jupyter Notebook</a>
+  I wrote the source code for this animation and it can be found here: <a href="singular_value_decomposition.html#orthogonal_iteration">Jupyter Notebook</a>
   </figcaption>
   <img src="orthogonal_iteration.gif"/>
   
