--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ $(document).ready(function () {
 
 </div>
 
-<p>The HTML/CSS Webpage template was borrowed from <a href="https://bivinsadler.github.io/">a course taught by Dr. Bivin Sadler at SMU.</a>  </p>
+<p>The HTML/CSS Webpage template was taken from <a href="https://bivinsadler.github.io/">a course taught by Dr. Bivin Sadler at SMU.</a>  </p>
 
 <p>Look at the pictures of my previous projects below.</p>
 If you are interested you can <a href="work_experience.html">click here</a> to access my prior work experience.
