added grad descent lj presentation notebook

--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@ $(document).ready(function () {
         <li>
           <a href="index.html">Home</a>
         </li>
+		<li>
+		  <a href="grad_descent_lj.html">Research</a>
+		</li>
         <li>
           <a href="work_experience.html">Work Experience</a>
         </li>
