added final version ofprsentation

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ $(document).ready(function () {
           <a href="index.html">Home</a>
         </li>
 		<li>
-		  <a href="grad_descent_lennard_jones.html">Research</a>
+		  <a href="chem697presentation.html">Research</a>
 		</li>
         <li>
           <a href="work_experience.html">Work Experience</a>
