added publication page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="publications.html">Publications</a></li>
+                <li><a href="members.html">Members</a></li>
             </ul>
         </nav>
     </header>
